tests/errors/maskl_incorrect_bit_size.f90
program example
   print*, maskl(63)
end
